Fix h1 size regression, prevent horizontal scrolling on small phones

--- a/src/domain/event/event.module.scss
+++ b/src/domain/event/event.module.scss
@@ -115,7 +115,10 @@
 
 .occurrenceInfo {
   margin: $baseMargin 0;
-  width: 67%;
+  width: 100%;
+  @include respond-above(md) {
+    width: auto;
+  }
   display: block;
   .label {
     display: inline-flex;
@@ -129,7 +132,6 @@
   & > * {
     margin-left: 0;
     margin-right: $baseMargin;
-    white-space: nowrap;
   }
 }
 
@@ -146,7 +148,8 @@
   }
   button {
     border: 2px solid $hel-summer;
-    width: 20rem;
+    max-width: 20rem;
+    width: 100%;
     font-weight: $font-weight-normal;
     background-color: $hel-white;
     padding: $basePadding;
